--- a/templates/contact.html
+++ b/templates/contact.html
@@ -80,19 +80,20 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 33 9 07 45 12 65
+                          + 91 9495249448
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          muhammadnameer@gmail.com
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          42 rue Moulbert 75016 Paris
+                          Al-Munawara, Customs Road, Vadakara,
+                          Kerala
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
