--- a/templates/contact.html
+++ b/templates/contact.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
+            <h1 class="h2">02 : Contact me</h1>
           </div>
           
           <div class="row">
@@ -97,13 +97,13 @@
                         </li>
                       </ul>
                       <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
+                      <a href="https://www.facebook.com/Mnameerz" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
+                      <a href="https://twitter.com/MuhammadNameer8" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
                       </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+                      <a href="https://www.linkedin.com/in/muhammadnameer/" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
 
