--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
   <link href="./static/icon2.png" rel="icon">
 
-  <title>Muhammad Nameer\</title>  
+  <title>Muhammad Nameer</title>  
 
 <link href="./static/main.3f6952e4.css" rel="stylesheet"></head>
 
